Fixed issue with search field styles that caused some parts of characters to be clipped

--- a/src/MunKirjat/MainBundle/Resources/less/main.less
+++ b/src/MunKirjat/MainBundle/Resources/less/main.less
@@ -301,9 +301,10 @@ input[type="text"] {
 }
 
 #searchvalue {
-    width: 98.7%;
     font-size: 1.5em;
-    padding: 5px;
+    height: auto;
+    padding: 10px 3px;
+    width: 98.7%;
 }
 
 #search-results {
